tests/NormalTests/paczka1/small_fuzzy/52287748.err
Error in line 3: A723 A723 35,6
Error in line 6: BKhj5uIswkz S838 50,9
Error in line 12: BKhj5uIswkz S410 80,8
